fixed issue with asset pipeline.

--- a/app/views/sharred/_nav.html.erb
+++ b/app/views/sharred/_nav.html.erb
@@ -1,3 +1,3 @@
 <nav class="navbar">
-  <h1><%= image_tag "logo" %> Plus</h1>
+  <h1><img src="https://cdn.shopify.com/s/files/1/2654/9698/files/Name_Logo2_250x@2x.png?v=1513726116" /> Plus</h1>
 </nav>
