--- a/app/views/charges/check_membership.html.erb
+++ b/app/views/charges/check_membership.html.erb
@@ -2,14 +2,13 @@
   <% if @member != nil %>
     <h1><%= @time_left %> days are left on this membership.</h1>
   <% else %>
-    <h1>Email Not Found!</h1>
-    <p>Search Again</p>
     <form action="/check_membership" method="get">
+      <h1>Email Not Found!</h1>
+      <h3>Search Again!</h3>
       <label>Email</label>
-      <br />
       <input type="email" name="member" id="member" />
-      <br />
-      <input type="submit" value="Search" />
+      <br>
+      <input type="submit" value="Search" class="standard-button"/>
     </form>
   <% end %>
 </div>
