--- a/app/views/charges/renew_membership.html.erb
+++ b/app/views/charges/renew_membership.html.erb
@@ -1,11 +1,10 @@
 <div class="container">
-  <h1>Check Membership Status</h1>
   <form action="/check_membership" method="get">
+    <h1>Check Membership Status</h1>
     <label>Email</label>
-    <br />
     <input type="email" name="member" id="member" />
-    <br />
-    <input type="submit" value="Search" />
+    <br>
+    <input type="submit" value="Search" class="standard-button"/>
   </form>
   <h1>Renew Membership</h1>
   <p>This will add an additional 365 days to your membership.</p>
